fixed rendering problems on firefox, mobile

--- a/style/app.css
+++ b/style/app.css
@@ -3,18 +3,20 @@
     background-attachment: fixed;
     background-size: cover;
     background-image: url("../assets/cover-2048.jpg");
-    min-height: 100%;
+    min-height: 100vh;
 }
 
 .center-div {
     position: absolute;
     margin: auto;
-    top: 0;
+    /* top: 0; */
     right: 0;
-    bottom: 0;
+    /* bottom: 0; */
     left: 0;
     height: fit-content;
     height: -moz-fit-content;
+    top: 50%; left: 50%;
+    transform: translate(-50%,-50%);
 }
 
 .content-body {
